--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	overflow: hidden;
 	overflow-x: hidden;
 	height: 100%;
-	background-image: url("./assets/backgroundHD.jpg");
+	background-image: url("./assets/BackgroundHD.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	-webkit-background-size: cover;
