--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body {
 	margin: 0 auto;
 }
 
-#container {
+/* #container {
 	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
-}
+} */
 /* @media screen and (min-width: 1500px) {
 	#container {W
 		box-shadow: inset 0px 0px 100px 90px rgba(0, 0, 0, 0.75);
@@ -288,7 +288,7 @@ p {
 
 /* Body for the background carousel */
 body {
-	border: 0.1vh solid black;
+	border: 0.01vh solid black;
 	background-color: black;
 	-webkit-transition: all 1.2s linear;
 	-moz-transition: all 1.2s linear;
@@ -301,4 +301,5 @@ body {
 	color: black;
 	height: 100%;
 	width: 100%;
+	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
 }
