--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ p {
 }
 
 #container {
-	/* min-height: 100%; */
-	height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-	height: calc(var(--vh, 1vh) * 100);
+	min-height: 100%;
+	/* height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+	/* height: calc(var(--vh, 1vh) * 100);  */
 }
 
 #main {
@@ -290,7 +290,7 @@ p {
 
 /* Body for the background carousel */
 body {
-	border: 0.01vh solid black;
+	/* border: 0.01vh solid black; */
 	background-color: black;
 	-webkit-transition: all 1.2s linear;
 	-moz-transition: all 1.2s linear;
