--- a/style.css
+++ b/style.css
@@ -50,14 +50,14 @@ p {
 }
 
 #container {
-	min-height: 100%;
-	/* height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
-	/* height: calc(var(--vh, 1vh) * 100);  */
+	/* min-height: 100vh; */
+	height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
 }
 
 #main {
 	overflow: auto;
-	padding-bottom: 100px;
+	/* padding-bottom: 100px; */
 }
 
 #footer {
@@ -68,6 +68,12 @@ p {
 	text-align: center;
 	letter-spacing: 3px;
 }
+
+/* #footer {
+	grid-row-start: 2;
+	grid-row-end: 3;
+	
+} */
 
 /* social media icons */
 
@@ -304,4 +310,6 @@ body {
 	height: 100%;
 	width: 100%;
 	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
+	/* display: grid;
+	grid-template-rows: 1fr auto; */
 }
