--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ p {
 	clear: both;
 	text-align: center;
 	letter-spacing: 3px;
+	z-index: 0;
 }
 
 /* #footer {
@@ -307,7 +308,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: center center;
 	color: black;
-	height: 100%;
+	height: calc(var(--vh, 1vh) * 100);
 	width: 100%;
 	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
 	/* display: grid;
