added overflow hidden and position fixed to body

--- a/style.css
+++ b/style.css
@@ -311,6 +311,8 @@ body {
 	height: calc(var(--vh, 1vh) * 100);
 	width: 100%;
 	box-shadow: inset 0px 0px 50px 50px rgba(0, 0, 0, 0.4);
+	overflow: hidden;
+	position: fixed;
 	/* display: grid;
 	grid-template-rows: 1fr auto; */
 }
