changes made to background

--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@ p {
 	width: 55px;
 	height: 55px;
 	background: #fff;
-	background: url(./assets/socialwhite.PNG);
-	background-size: 10px 10px;
+	background: url(./assets/socialwhite2.jpg);
+	background-size: 125px 125px;
 	text-align: center;
 	line-height: 47px;
 	font-size: 30px;
