social media icons colour change

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ p {
 	line-height: 1em;
 	font-size: 20px;
 	color: white;
+	text-shadow: 2px 2px 4px #000000;
 }
 
 @media screen and (max-width: 600px) {
@@ -47,6 +48,7 @@ p {
 }
 .email a {
 	color: white !important;
+	text-shadow: 2px 2px 4px #000000;
 }
 
 #main {
@@ -87,8 +89,8 @@ p {
 .social ul li a {
 	width: 55px;
 	height: 55px;
-	background: #fff;
-	background: url(./assets/socialwhite2.jpg);
+	background: rgba(255, 255, 255, 0.9);
+	/* background: url(./assets/socialwhite2.jpg); */
 	background-size: 125px 125px;
 	text-align: center;
 	line-height: 47px;
@@ -98,9 +100,62 @@ p {
 	border-radius: 50%;
 	position: relative;
 	overflow: hidden;
-	border: 3px solid rgb(235, 235, 235);
+	border: 2px solid rgb(20, 20, 20);
 	z-index: 1;
 }
+
+/* TEST STARTS HERE 
+
+
+*/
+/* BACKGROUND COLOURS OF SOCIAL ICONS - COLOURED  */
+.social ul li a:hover {
+	border: 2px solid rgb(255, 255, 255);
+	transition: 0.5s;
+}
+.social ul li:nth-child(1) a {
+	background: #1877f2;
+}
+
+.social ul li:nth-child(2) a {
+	background: #1da1f2;
+}
+
+.social ul li:nth-child(3) a {
+	background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+	background-size: cover;
+}
+
+.social ul li:nth-child(4) a {
+	background: #ff0000;
+}
+
+.social ul li:nth-child(5) a {
+	background: #1ed760;
+}
+.social ul li:nth-child(6) a {
+	background-image: linear-gradient(to right, #f95d50, #b64ce2, #2bc6fe);
+	background: #ff6932; /* Old browsers */
+	background: -moz-linear-gradient(-45deg, #ff6932 20%, #d600fc 50%, #3cf2fc 80%); /* FF3.6+ */
+	background: -webkit-gradient(
+		linear,
+		left top,
+		right bottom,
+		color-stop(20%, #ff6932),
+		color-stop(50%, #d600fc),
+		color-stop(80%, #3cf2fc)
+	); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg, #ff6932 10%, #d600fc 50%, #3cf2fc 80%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg, #ff6932 20%, #d600fc 50%, #3cf2fc 80%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg, #ff6932 20%, #d600fc 50%, #3cf2fc 80%); /* IE10+ */
+	background: linear-gradient(135deg, #ff6932 20%, #d600fc 50%, #3cf2fc 80%); /* W3C */
+	background-size: cover;
+}
+
+/* TEST ENDS HERE
+
+
+*/
 
 .social ul li a .fa {
 	position: relative;
@@ -122,6 +177,7 @@ p {
 	width: 100%;
 	height: 100%;
 	background: #f00;
+	background: rgba(255, 255, 255, 0);
 	transition: .5s;
 	z-index: 2;
 }
@@ -149,7 +205,7 @@ p {
 }
 
 .social ul li:nth-child(3) a:before {
-	background-image: linear-gradient(to right, #f5d100, #df1233, #803db1);
+	/* background-image: linear-gradient(to right, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%); */
 }
 
 .social ul li:nth-child(4) a:before {
@@ -160,7 +216,58 @@ p {
 	background: #1ed760;
 }
 .social ul li:nth-child(6) a:before {
-	background-image: linear-gradient(to right, #f95d50, #b64ce2, #2bc6fe);
+	/* background-image: linear-gradient(to right, #f95d50, #b64ce2, #2bc6fe); */
+}
+
+/* MERCH */
+
+.merch {
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	letter-spacing: 3.3px;
+}
+.merch a {
+	font-size: 45px;
+	font-weight: 600;
+	color: white;
+	text-shadow: 2px 2px 4px #000000;
+}
+.merch a:hover {
+	color: rgba(255, 255, 255, 0.966);
+	text-decoration: none;
+	text-shadow: 2px 2px 4px #000000;
+}
+
+.merch a::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	display: inline-block;
+	height: 1em;
+	width: 100%;
+	border-bottom: 2px solid;
+	margin-top: 15px;
+	opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(0, 1);
+	transform: scale(0, 1);
+	color: rgb(255, 255, 255);
+}
+
+.merch a:hover:after {
+	opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+}
+
+/* Mobile compatibility */
+@media screen and (max-width: 600px) {
+	.merch a {
+		font-size: 35px;
+	}
 }
 
 /* Logo */
@@ -168,7 +275,7 @@ p {
 .logo {
 	display: flex;
 	position: absolute;
-	top: 50%;
+	top: 25%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
